--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background:
         linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,0.4)),
         url("momWsearch_bkgnd.png");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
