--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
         url("momWsearch_bkgnd.png");
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: fixed;
 
     font-family: Arial, sans-serif;
