--- a/style.css
+++ b/style.css
@@ -56,18 +56,6 @@ main {
     font-weight: bold;
 }
 
-.grid td.found::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: -2px;
-    right: -2px;
-    height: 3px;
-    background: red;
-    transform: translateY(-50%);
-    pointer-events: none;
-}
-
 /* Word list strike-through */
 .wordlist li.done {
     text-decoration: line-through;
@@ -90,8 +78,8 @@ main {
 
 .word-line {
   position: absolute;
-  height: 6px;
-  background: red;
+  height: 2px;
+  background: green;
   border-radius: 3px;
   opacity: 0.85;
   transform-origin: 0 50%;
